--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Rishitha Minol",
   "license": "ISC",
   "dependencies": {
+    "csv-load-sync": "^1.0.0",
     "express": "^4.16.3",
+    "maxmind": "^2.7.0",
     "nodemon": "^1.17.5"
   }
 }
