added: New user verification mechanism

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "maxmind": "^2.7.0",
     "mysql": "^2.15.0",
+    "nexmo": "^2.3.0",
     "nodemon": "^1.17.5"
   }
 }
