dbconfig.json edited online with Bitbucket

--- a/dbconfig.json
+++ b/dbconfig.json
@@ -2,6 +2,6 @@
   "host": "hostname",
   "user": "username",
   "password": "password",
-  "connectionLimit": 50
-  "port": 3306,
+  "connectionLimit": 50,
+  "port": 3306
 }
